fixed alignement of instruction box

--- a/SiriusOrderClient/WebContent/css/attendance.css
+++ b/SiriusOrderClient/WebContent/css/attendance.css
@@ -69,7 +69,7 @@ abbr[data-original-title], abbr[title] {
 	font-family: serif;
 	font-style: italic;
 	font-size: 1.5rem;
-	top: 110px;
+	top: 65px;
 	left:60px;
 }
 .attendancePageContainer {
